Fix modal text invisibility problem
+ Add button box padding in modal

--- a/Moka/cinnamon/cinnamon.css
+++ b/Moka/cinnamon/cinnamon.css
@@ -887,6 +887,7 @@ StScrollBar StButton#vhandle:hover {
 .modal-dialog {
     border-radius: 0.5em;
     background-color: rgba(0,0,0,0.9);
+    color: white;
     border: none;
 
     padding-right: 3em;
@@ -896,6 +897,7 @@ StScrollBar StButton#vhandle:hover {
 }
 .modal-dialog-button-box {
     spacing: 24px;
+    padding-top: 10px;
 }
 .modal-dialog-button {
     border-radius: 18px;
